# project-1-pembenci-motor-matic

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  node.cpp  segment.cpp  segment_handler.cpp  socket.cpp  test1
header/: color.hpp  node.hpp  segment.hpp  segment_handler.hpp  socket.hpp
